# GS-IOT-solution

./: .gitignore  CONTRATO DE EXEMPLO COM ERROS.txt  CONTRATO MODELO REAL.txt  README.md  api.py  clean_database.py  contract_fields_mapping.json  generated_contract.txt  inspect_chunks.py  inspect_sqlite.py  llm_config.py  main.py  pyproject.toml  rag_functions.py  tools.py
prompts/: analyze_contract.txt  chat_agent.txt  expand_query.txt  fill_contract.txt  filter_contract_fields.txt  filter_law_files.txt  refactor_contract.txt  retrieve_law.txt  tool_agent.txt
rag_files/contracts/: CONTRATO DE CESSÃO DE DIREITOS DE IMAGEM.txt  CONTRATO DE CESSÃO DE QUOTAS SOCIAIS.txt  CONTRATO DE COMODATO DE BEM IMÓVEL.txt  CONTRATO DE COMPRA E VENDA DE VEÍCULO.txt  CONTRATO DE CONSTITUIÇÃO DE HOLDING FAMILIAR.txt  CONTRATO DE CORRETAGEM IMOBILIÁRIA.txt  CONTRATO DE DESENVOLVIMENTO DE SOFTWARE.txt  CONTRATO DE DOAÇÃO DE BEM IMÓVEL.txt  CONTRATO DE LOCAÇÃO DE IMÓVEL URBANO.txt  CONTRATO DE PARCERIA COMERCIAL E DISTRIBUIÇÃO.txt  CONTRATO DE PARTICULAR DE PROMESSA DE COMPRA E VENDA DE IMÓVEL.txt  CONTRATO DE PRESTAÇÃO DE SERVIÇOS.txt  CONTRATO DE SOCIEDADE EMPRESÁRIA LIMITADA.txt  CONTRATO DE TRABALHO COM REGISTRO CLT.txt
rag_files/laws/: CLT.txt  CODIGOCIVIL.txt  CODIGODEFESADOCONSUMIDOR.txt  CODIGOPENAL.txt  CODIGOPROCESSOCIVIL.txt  CODIGOPROCESSOPENAL.txt  CONSOLIDACAODASLEISDOTRABALHO.txt  CONSTITUICAOFEDERAL.txt  ESTATUTOCRIANCAADOLESCENTE.txt
